--- a/.github/workflows/manual_firebase_distribution.yml
+++ b/.github/workflows/manual_firebase_distribution.yml
@@ -10,30 +10,10 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set Environment Variables
-        uses: tw3lveparsecs/github-actions-setvars@v0.1
-        with:
-          envFilePath: .github/workflows/variables/android.env
-
-      - name: 🔧 Install dependencies
-        uses: ./.github/workflows/install/
-
-      - name: Run tests
-        run: ./gradlew runTest
-
-      - name: Build with Gradle
-        run: ./gradlew assembleDevelop
-
-      - uses: actions/upload-artifact@v2
-        with:
-          name: apk
-          path: app/build/outputs/apk/develop/
+    uses: nova-wallet/nova-wallet-android/.github/workflows/android_build.yml@fix/github_actions
+    with:
+      gradlew-command: assembleDevelop
+    secrets: inherit
 
   upload:
     runs-on: ubuntu-latest
@@ -54,4 +34,4 @@ jobs:
           firebase-token: ${{ secrets.ANDROID_DEV_FIREBASE_TOKEN }}
           releaseNotes: ${{ github.event.head_commit.message }}
           test-groups: ${{ github.event.inputs.firebase_group }}
-          upload-file: app/app-develop.apk
+          upload-file: app/develop/app-develop.apk
