--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -74,7 +74,7 @@ jobs:
       #   run: ./gradlew runTest
 
       - name: 🔐 Getting sign key
-        if: ${{ inputs.gradlew-command != "false" }}
+        if: ${{ !startsWith(inputs.gradlew-command, 'false') }}
         id: write_file
         uses: timheuer/base64-to-file@v1.1
         with:
@@ -83,16 +83,16 @@ jobs:
           encodedString: ${{ env.CI_MARKET_KEY_FILE }}
 
       - name: 🏗 Build app
-        if: ${{ inputs.gradlew-command != "false" }}
+        if: ${{ !startsWith(inputs.gradlew-command, 'false') }}
         run: ./gradlew ${{ inputs.gradlew-command }}
 
       - name: 🧹 Delete key after building
-        if: ${{ inputs.gradlew-command != "false" }}
+        if: ${{ !startsWith(inputs.gradlew-command, 'false') }}
         run: rm ./app/${{ env.CI_MARKET_KEY_NAME }}
 
       - name: ➡️ Upload build artifacts
         uses: actions/upload-artifact@v2
-        if: ${{ inputs.gradlew-command != "false" }}
+        if: ${{ !startsWith(inputs.gradlew-command, 'false') }}
         with:
           name: apk
           path: app/build/outputs/apk/
