--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -69,9 +69,9 @@ jobs:
       - name: 🔧 Install dependencies
         uses: ./.github/workflows/install/
 
-      # - name: 🧪 Run tests
-      #   if: ${{ inputs.run-tests }} == "true"
-      #   run: ./gradlew runTest
+      - name: 🧪 Run tests
+        if: ${{ inputs.run-tests }} == "true"
+        run: ./gradlew runTest
 
       - name: 🔐 Getting sign key
         if: ${{ !startsWith(inputs.gradlew-command, 'false') }}
