change logic for readSecretOrNull

--- a/scripts/secrets.gradle
+++ b/scripts/secrets.gradle
@@ -13,11 +13,11 @@ ext.readSecretOrNull = { secretName ->
 
     if (secret == null) return null
 
-    return maybeWrapInQuotes(secret)
+    return secret
 }
 
 ext.readSecret = { secretName ->
-    return readSecretOrNull(secretName) ?: secretNotFound(secretName)
+    return maybeWrapInQuotes(readSecretOrNull(secretName)) ?: secretNotFound(secretName)
 }
 
 private static def secretNotFound(secretName) {
