--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -11,6 +11,13 @@ on:
         required: false
         type: boolean
         default: true
+      keystore-file-name:
+        required: false
+        type: string
+        default: false
+      keystore-file-base64:
+        required: false
+        type: string
     secrets:
       ACALA_PROD_AUTH_TOKEN:
         required: true
@@ -39,6 +46,12 @@ on:
         required: false
       CI_KEYSTORE_KEY_PASS:
         required: false
+      CI_GITHUB_KEYSTORE_PASS:
+        required: false
+      CI_GITHUB_KEYSTORE_KEY_ALIAS:
+        required: false
+      CI_GITHUB_KEYSTORE_KEY_PASS:
+        required: false
 
 env:
   ACALA_PROD_AUTH_TOKEN: ${{ secrets.ACALA_PROD_AUTH_TOKEN }}
@@ -52,11 +65,14 @@ env:
   CI_MARKET_KEYSTORE_KEY_ALIAS: ${{ secrets.CI_MARKET_KEYSTORE_KEY_ALIAS }}
   CI_MARKET_KEYSTORE_KEY_PASS: ${{ secrets.CI_MARKET_KEYSTORE_KEY_PASS }}
   CI_MARKET_KEY_FILE: ${{ secrets.RELEASE_MARKET_KEY_FILE }}
-  CI_MARKET_KEY_NAME: market_key.jks
 
   CI_KEYSTORE_PASS: ${{ secrets.CI_KEYSTORE_PASS }}
   CI_KEYSTORE_KEY_ALIAS: ${{ secrets.CI_KEYSTORE_KEY_ALIAS }}
   CI_KEYSTORE_KEY_PASS: ${{ secrets.CI_KEYSTORE_KEY_PASS }}
+
+  CI_GITHUB_KEYSTORE_PASS: ${{ secrets.CI_GITHUB_KEYSTORE_PASS }}
+  CI_GITHUB_KEYSTORE_KEY_ALIAS: ${{ secrets.CI_GITHUB_KEYSTORE_KEY_ALIAS }}
+  CI_GITHUB_KEYSTORE_KEY_PASS: ${{ secrets.CI_GITHUB_KEYSTORE_KEY_PASS }}
 
 jobs:
   build-app:
@@ -74,21 +90,21 @@ jobs:
         run: ./gradlew runTest
 
       - name: 🔐 Getting sign key
-        if: ${{ !startsWith(inputs.gradlew-command, 'false') }}
+        if: ${{ !startsWith(inputs.keystore-file-name, 'false') }}
         id: write_file
         uses: timheuer/base64-to-file@v1.1
         with:
-          fileName: ${{ env.CI_MARKET_KEY_NAME }}
+          fileName: ${{ inputs.keystore-file-name }}
           fileDir: './app/'
-          encodedString: ${{ env.CI_MARKET_KEY_FILE }}
+          encodedString: ${{ inputs.keystore-file-base64 }}
 
       - name: 🏗 Build app
         if: ${{ !startsWith(inputs.gradlew-command, 'false') }}
         run: ./gradlew ${{ inputs.gradlew-command }}
 
       - name: 🧹 Delete key after building
-        if: ${{ !startsWith(inputs.gradlew-command, 'false') }}
-        run: rm ./app/${{ env.CI_MARKET_KEY_NAME }}
+        if: ${{ !startsWith(inputs.keystore-file-name, 'false') }}
+        run: rm ./app/${{ inputs.keystore-file-name }}
 
       - name: ➡️ Upload build artifacts
         uses: actions/upload-artifact@v2
