--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -5,5 +5,5 @@ on:
 
 jobs:
   unit-tests:
-    uses: nova-wallet/nova-wallet-android/.github/workflows/android_build.yml@fix/github_actions
+    uses: nova-wallet/nova-wallet-android/.github/workflows/android_build.yml@${GITHUB_REF##*/}
     secrets: inherit
