--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -3,7 +3,10 @@ name: Pull request
 on:
   pull_request:
 
+env:
+  branch: ${{ github.head_ref || github.ref_name }}
+
 jobs:
   unit-tests:
-    uses: nova-wallet/nova-wallet-android/.github/workflows/android_build.yml@${{ github.head_ref || github.ref_name }}
+    uses: nova-wallet/nova-wallet-android/.github/workflows/android_build.yml@${{env.branch}}
     secrets: inherit
