--- a/.github/workflows/destribute_app_to_play_store.yml
+++ b/.github/workflows/destribute_app_to_play_store.yml
@@ -14,8 +14,9 @@ on:
 
 jobs:
   build:
-    uses: nova-wallet/nova-wallet-android/.github/workflows/android_build.yml@${{github.event.inputs.branch}}
+    uses: nova-wallet/nova-wallet-android/.github/workflows/android_build.yml@develop
     with:
+      branch: ${{ github.event.inputs.branch }}
       gradlew-command: assembleReleaseMarket
       keystore-file-name: market_key.jks
       keystore-file-base64: ${{ secrets.RELEASE_MARKET_KEY_FILE }}
