--- a/.github/workflows/manual_firebase_distribution.yml
+++ b/.github/workflows/manual_firebase_distribution.yml
@@ -14,8 +14,9 @@ on:
 
 jobs:
   build:
-    uses: nova-wallet/nova-wallet-android/.github/workflows/android_build.yml@${{github.event.inputs.branch}}
+    uses: nova-wallet/nova-wallet-android/.github/workflows/android_build.yml@develop
     with:
+      branch: ${{ github.event.inputs.branch }}
       gradlew-command: assembleDevelop
     secrets: inherit
 
