--- a/.github/workflows/manual_firebase_distribution.yml
+++ b/.github/workflows/manual_firebase_distribution.yml
@@ -7,41 +7,18 @@ on:
         description: 'Firebase group'
         required: true
         default: dev-team
+      branch:
+        description: 'From which branch the application will be built'
+        required: true
+        default: develop
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    container:
-      image: ghcr.io/nova-wallet/build_tools:pr-3
-      credentials:
-        username: stepanLav
-        password: ${{ secrets.GITHUB_TOKEN }}
-    env:
-      ACALA_PROD_AUTH_TOKEN: ${{ secrets.ACALA_PROD_AUTH_TOKEN }}
-      ACALA_TEST_AUTH_TOKEN: ${{ secrets.ACALA_TEST_AUTH_TOKEN }}
-      MOONBEAM_PROD_AUTH_TOKEN: ${{ secrets.MOONBEAM_PROD_AUTH_TOKEN }}
-      MOONBEAM_TEST_AUTH_TOKEN: ${{ secrets.MOONBEAM_TEST_AUTH_TOKEN }}
-      MOONPAY_PRODUCTION_SECRET: ${{ secrets.MOONPAY_PRODUCTION_SECRET }}
-      MOONPAY_TEST_SECRET: ${{ secrets.MOONPAY_TEST_SECRET }}
-
-      CI_KEYSTORE_PASS: ${{ secrets.CI_KEYSTORE_PASS }}
-      CI_KEYSTORE_KEY_ALIAS: ${{ secrets.CI_KEYSTORE_KEY_ALIAS }}
-      CI_KEYSTORE_KEY_PASS: ${{ secrets.CI_KEYSTORE_KEY_PASS }}
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Run tests
-        run: ./gradlew runTest
-
-      - name: Build with Gradle
-        run: ./gradlew assembleDevelop
-
-      - uses: actions/upload-artifact@v2
-        with:
-          name: apk
-          path: app/build/outputs/apk/develop/
+    uses: nova-wallet/nova-wallet-android/.github/workflows/android_build.yml@develop
+    with:
+      branch: ${{ github.event.inputs.branch }}
+      gradlew-command: assembleDevelop
+    secrets: inherit
 
   upload:
     runs-on: ubuntu-latest
@@ -55,13 +32,11 @@ jobs:
           name: apk
           path: app
 
-      - name: Upload artifact to Firebase App Distribution
-        id: upload
-        continue-on-error: true
-        uses: wzieba/Firebase-Distribution-Github-Action@v1
+      - name: 🗳 Upload to Firebase
+        uses: ./.github/workflows/upload-to-firebase
         with:
           appId: ${{ secrets.ANDROID_DEVELOP_FIREBASE_APP_ID }}
-          token: ${{ secrets.ANDROID_DEV_FIREBASE_TOKEN }}
+          firebase-token: ${{ secrets.ANDROID_DEV_FIREBASE_TOKEN }}
           releaseNotes: ${{ github.event.head_commit.message }}
-          groups: ${{ github.event.inputs.firebase_group }}
-          file: app/app-develop.apk
+          test-groups: ${{ github.event.inputs.firebase_group }}
+          upload-file: app/develop/app-develop.apk
