--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -3,28 +3,10 @@ name: Pull request
 on:
   pull_request:
 
+
 jobs:
   test:
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-
-    env:
-      ACALA_PROD_AUTH_TOKEN: ${{ secrets.ACALA_PROD_AUTH_TOKEN }}
-      ACALA_TEST_AUTH_TOKEN: ${{ secrets.ACALA_TEST_AUTH_TOKEN }}
-      MOONBEAM_PROD_AUTH_TOKEN: ${{ secrets.MOONBEAM_PROD_AUTH_TOKEN }}
-      MOONBEAM_TEST_AUTH_TOKEN: ${{ secrets.MOONBEAM_TEST_AUTH_TOKEN }}
-      MOONPAY_PRODUCTION_SECRET: ${{ secrets.MOONPAY_PRODUCTION_SECRET }}
-      MOONPAY_TEST_SECRET: ${{ secrets.MOONPAY_TEST_SECRET }}
-
-      CI_KEYSTORE_PASS: ${{ secrets.CI_KEYSTORE_PASS }}
-      CI_KEYSTORE_KEY_ALIAS: ${{ secrets.CI_KEYSTORE_KEY_ALIAS }}
-      CI_KEYSTORE_KEY_PASS: ${{ secrets.CI_KEYSTORE_KEY_PASS }}
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: 🔧 Install dependencies
-        uses: ./.github/workflows/install/
-
-      - name: 🧪 Run tests
-        run: ./gradlew runTest
+    uses: nova-wallet/nova-wallet-android/.github/workflows/android_build.yml@fix/github_actions
+    with:
+      branch: ${{github.head_ref}}
+    secrets: inherit
