--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   test:
-    uses: nova-wallet/nova-wallet-android/.github/workflows/android_build.yml@fix/github_actions
+    uses: nova-wallet/nova-wallet-android/.github/workflows/android_build.yml@develop
     with:
       branch: ${{github.head_ref}}
     secrets: inherit
