--- a/app/build.gradle
+++ b/app/build.gradle
@@ -147,6 +147,8 @@ dependencies {
 
     implementation project(':feature-assets')
 
+    implementation project(':feature-vote')
+
     implementation kotlinDep
 
     implementation androidDep
