--- a/settings.gradle
+++ b/settings.gradle
@@ -21,3 +21,4 @@ include ':feature-currency-api'
 include ':feature-currency-impl'
 include ':feature-governance-api'
 include ':feature-governance-impl'
+include ':feature-vote'
