--- a/feature-governance-api/build.gradle
+++ b/feature-governance-api/build.gradle
@@ -27,7 +27,9 @@ dependencies {
     implementation coroutinesDep
     implementation project(':runtime')
     implementation project(":common")
+
     api project(":feature-wallet-api")
+    api project(":feature-account-api")
 
     implementation daggerDep
 
