--- a/feature-governance-impl/build.gradle
+++ b/feature-governance-impl/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation project(':feature-account-api')
     implementation project(':feature-wallet-api')
     implementation project(':feature-governance-api')
+    implementation project(':feature-dapp-api')
 
     implementation project(":common")
     implementation project(":runtime")
@@ -47,7 +48,7 @@ dependencies {
     implementation kotlinDep
 
     implementation androidDep
-    
+
     implementation coroutinesDep
     implementation coroutinesAndroidDep
     implementation lifeCycleKtxDep
