Make identity reusable

--- a/feature-staking-api/build.gradle
+++ b/feature-staking-api/build.gradle
@@ -31,7 +31,8 @@ dependencies {
     implementation project(':runtime')
     implementation project(':common')
 
-    implementation project(":feature-wallet-api")
+    api project(":feature-wallet-api")
+    api project(":feature-account-api")
 
     api project(':core-api')
 }
