--- a/feature-governance-api/build.gradle
+++ b/feature-governance-api/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 
     api project(":feature-wallet-api")
     api project(":feature-account-api")
+    api project(":feature-dapp-api")
 
     implementation daggerDep
 
