--- a/feature-governance-impl/build.gradle
+++ b/feature-governance-impl/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation project(":common")
     implementation project(":runtime")
 
+    implementation markdownDep
+
     implementation materialDep
 
     implementation fearlessLibDep
