--- a/feature-governance-api/build.gradle
+++ b/feature-governance-api/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     api project(":feature-account-api")
     api project(":feature-dapp-api")
 
+    implementation markdownDep
+
     implementation daggerDep
 
     implementation fearlessLibDep
