--- a/feature-governance-impl/build.gradle
+++ b/feature-governance-impl/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     implementation project(":runtime")
 
     implementation markdownDep
+    implementation markdownImage
+    implementation markdownTables
+    implementation markdownStrikethrough
 
     implementation materialDep
 
