Feature/governance referendum description (#503)
* Referendum description

* Changed title

* Markdown description fix

--- a/feature-governance-impl/build.gradle
+++ b/feature-governance-impl/build.gradle
@@ -41,6 +41,11 @@ dependencies {
     implementation project(":common")
     implementation project(":runtime")
 
+    implementation markdownDep
+    implementation markdownImage
+    implementation markdownTables
+    implementation markdownStrikethrough
+
     implementation materialDep
 
     implementation fearlessLibDep
