--- a/common/build.gradle
+++ b/common/build.gradle
@@ -106,4 +106,6 @@ dependencies {
     testImplementation project(':test-shared')
 
     implementation permissionsDep
+
+    implementation flexBoxDep
 }
