Implemented governance dapps

--- a/feature-governance-impl/build.gradle
+++ b/feature-governance-impl/build.gradle
@@ -13,12 +13,16 @@ android {
         targetSdkVersion rootProject.targetSdkVersion
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        buildConfigField "String", "GOVERNANCE_DAPPS_URL", "\"https://raw.githubusercontent.com/nova-wallet/nova-utils/master/governance/dapps_dev.json\""
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
+            buildConfigField "String", "GOVERNANCE_DAPPS_URL", "\"https://raw.githubusercontent.com/nova-wallet/nova-utils/master/governance/dapps.json\""
         }
     }
 
