Referenda list shimmering

--- a/feature-governance-impl/build.gradle
+++ b/feature-governance-impl/build.gradle
@@ -64,6 +64,8 @@ dependencies {
 
     implementation viewModelKtxDep
 
+    implementation shimmerDep
+
     implementation daggerDep
     kapt daggerKapt
 
