Implement network service based on Nova sockets

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -99,6 +99,9 @@ dependencies {
     api coilDep
     api coilSvg
 
+    api web3jDep
+    api coroutinesFutureDep
+
     implementation shimmerDep
 
     testImplementation jUnitDep
