--- a/common/build.gradle
+++ b/common/build.gradle
@@ -99,6 +99,10 @@ dependencies {
     api coilDep
     api coilSvg
 
+    api web3jDep
+    api coroutinesFutureDep
+    api coroutinesRxDep
+
     implementation shimmerDep
 
     testImplementation jUnitDep
