Manage tokens screen

--- a/feature-governance-impl/build.gradle
+++ b/feature-governance-impl/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     implementation coroutinesAndroidDep
     implementation lifeCycleKtxDep
 
+    implementation project(":core-db")
+
     implementation viewModelKtxDep
 
     implementation shimmerDep
