--- a/feature-ledger-impl/build.gradle
+++ b/feature-ledger-impl/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation coroutinesAndroidDep
     implementation lifeCycleKtxDep
 
+    implementation project(":core-db")
+
     implementation daggerDep
     kapt daggerKapt
 
