--- a/feature-wallet-api/build.gradle
+++ b/feature-wallet-api/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation lifeCycleKtxDep
 
     api project(':core-api')
+    api project(':core-db')
 
     testImplementation project(':test-shared')
 }
