--- a/common/build.gradle
+++ b/common/build.gradle
@@ -54,7 +54,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
 
     api project(":core-api")
 
