--- a/feature-assets/build.gradle
+++ b/feature-assets/build.gradle
@@ -23,6 +23,10 @@ android {
         buildConfigField "String", "MOONPAY_PRIVATE_KEY", readSecret("MOONPAY_TEST_SECRET")
         buildConfigField "String", "MOONPAY_HOST", "\"buy-staging.moonpay.com\""
         buildConfigField "String", "MOONPAY_PUBLIC_KEY", "\"pk_test_DMRuyL6Nf1qc9OzjPBmCFBeCGkFwiZs0\""
+
+        buildConfigField "String", "MERCURYO_WIDGET_ID", "\"fde83da2-2a4c-4af9-a2ca-30aead5d65a0\""
+        buildConfigField "String", "MERCURYO_SECRET", readSecret("MERCURYO_TEST_SECRET")
+        buildConfigField "String", "MERCURYO_HOST", "\"sandbox-exchange.mrcr.io\""
     }
 
     buildTypes {
@@ -36,6 +40,10 @@ android {
             buildConfigField "String", "MOONPAY_PRIVATE_KEY", readSecret("MOONPAY_PRODUCTION_SECRET")
             buildConfigField "String", "MOONPAY_PUBLIC_KEY", "\"pk_live_Boi6Rl107p7XuJWBL8GJRzGWlmUSoxbz\""
             buildConfigField "String", "MOONPAY_HOST", "\"buy.moonpay.com\""
+
+            buildConfigField "String", "MERCURYO_WIDGET_ID", "\"TODO\""
+            buildConfigField "String", "MERCURYO_SECRET", readSecret("MERCURYO_PRODUCTION_SECRET")
+            buildConfigField "String", "MERCURYO_HOST", "\"exchange.mercuryo.io\""
 
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
