Fixed building for release (#607)
* Fixed building for release

* Remove redundant dependency

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -54,7 +54,9 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    implementation(name: 'renderscript-toolkit', ext: 'aar')
 
     api project(":core-api")
 
