--- a/feature-assets/build.gradle
+++ b/feature-assets/build.gradle
@@ -41,7 +41,7 @@ android {
             buildConfigField "String", "MOONPAY_PUBLIC_KEY", "\"pk_live_Boi6Rl107p7XuJWBL8GJRzGWlmUSoxbz\""
             buildConfigField "String", "MOONPAY_HOST", "\"buy.moonpay.com\""
 
-            buildConfigField "String", "MERCURYO_WIDGET_ID", "\"TODO\""
+            buildConfigField "String", "MERCURYO_WIDGET_ID", "\"07c3ca04-f4a8-4d68-a192-83a1794ba705\""
             buildConfigField "String", "MERCURYO_SECRET", readSecret("MERCURYO_PRODUCTION_SECRET")
             buildConfigField "String", "MERCURYO_HOST", "\"exchange.mercuryo.io\""
 
