--- a/feature-wallet-impl/build.gradle
+++ b/feature-wallet-impl/build.gradle
@@ -14,6 +14,9 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
+        buildConfigField "String", "EHTERSCAN_API_KEY_MOONBEAM", readSecret("EHTERSCAN_API_KEY_MOONBEAM")
+        buildConfigField "String", "EHTERSCAN_API_KEY_MOONRIVER", readSecret("EHTERSCAN_API_KEY_MOONRIVER")
+
         buildConfigField "String", "CROSS_CHAIN_CONFIG_URL", "\"https://raw.githubusercontent.com/nova-wallet/nova-utils/master/xcm/v2/transfers_dev.json\""
     }
 
