--- a/feature-crowdloan-api/build.gradle
+++ b/feature-crowdloan-api/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation project(':runtime')
     implementation project(":common")
     implementation project(":feature-account-api")
+    implementation project(":feature-wallet-api")
 
     implementation daggerDep
 
