--- a/feature-account-impl/build.gradle
+++ b/feature-account-impl/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation project(':feature-account-api')
     implementation project(':feature-currency-api')
     implementation project(':feature-ledger-api')
+    implementation project(':feature-versions-api')
 
     implementation kotlinDep
 
