--- a/feature-onboarding-impl/build.gradle
+++ b/feature-onboarding-impl/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation project(':feature-onboarding-api')
     implementation project(':feature-account-api')
     implementation project(':feature-wallet-api')
+    implementation project(':feature-versions-api')
 
     implementation kotlinDep
 
