--- a/feature-governance-impl/build.gradle
+++ b/feature-governance-impl/build.gradle
@@ -15,6 +15,8 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         buildConfigField "String", "GOVERNANCE_DAPPS_URL", "\"https://raw.githubusercontent.com/nova-wallet/nova-utils/master/governance/v2/dapps_dev.json\""
+
+        buildConfigField "String", "DELEGATION_TUTORIAL_URL", "\"https://docs.novawallet.io/nova-wallet-wiki/governance/add-delegate-information\""
     }
 
     buildTypes {
