Feature/in app update notification (#709)
* Add modules, add fetcher, add service and interactor

* Add fragment and layout

* Add gitingore files

* Di and logic

* Implement layout and logic

* Complete navigation and progress bar

* Fix date format and clean code

* Fixed version comparing and fixe navigation

* Fixe pr notes

* Changed banners

* Remove unused imports

* Fixed pr notes

--- a/settings.gradle
+++ b/settings.gradle
@@ -22,3 +22,6 @@ include ':feature-currency-impl'
 include ':feature-governance-api'
 include ':feature-governance-impl'
 include ':feature-vote'
+include ':feature-versions-impl'
+include ':feature-versions-api'
+
