--- a/feature-versions-impl/build.gradle
+++ b/feature-versions-impl/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation liveDataKtxDep
     implementation lifeCycleKtxDep
 
+    implementation markdownDep
+
     implementation daggerDep
     kapt daggerKapt
 
