--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -1,9 +1,18 @@
 name: Integration tests
 
 on:
+  push:
+    branches:
+      - develop
+  workflow_dispatch:
   pull_request:
+    branches:
+      - develop
+    types: [labeled]
 
 env:
+  TEST_CLASSES: io.novafoundation.nova.balances.BalancesIntegrationTest
+
   ACALA_PROD_AUTH_TOKEN: 'token'
   ACALA_TEST_AUTH_TOKEN: 'token'
   MOONBEAM_PROD_AUTH_TOKEN: 'token'
@@ -23,6 +32,9 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    if: |
+      contains(github.event.label.name, 'integratio_tests') ||
+      github.event.action != 'labeled'
     timeout-minutes: 30
 
     steps:
@@ -74,7 +86,7 @@ jobs:
           disable-animations: true
           profile: Nexus 5X
           api-level: 28
-          script: .github/workflows/run_integration_tests.sh io.novafoundation.nova.balances.BalancesIntegrationTest
+          script: .github/workflows/run_integration_tests.sh ${{ env.TEST_CLASSES }}
 
       - uses: actions/upload-artifact@v2
         if: always()
