--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -6,9 +6,7 @@ on:
       - develop
   workflow_dispatch:
   pull_request:
-    branches:
-      - develop
-    types: [labeled]
+    types: [labeled, pushed]
 
 env:
   TEST_CLASSES: io.novafoundation.nova.balances.BalancesIntegrationTest
