--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -6,6 +6,7 @@ on:
       - develop
   workflow_dispatch:
   pull_request:
+    types: [labeled]
 
 
 env:
@@ -31,7 +32,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     if: |
-      contains(github.event.label.name, 'integratio_tests') ||
+      contains(github.event.label.name, 'integration_tests') ||
       github.event.action != 'labeled'
     timeout-minutes: 30
 
