Fix - update screen is always shown if there is a critical update

--- a/feature-versions-impl/build.gradle
+++ b/feature-versions-impl/build.gradle
@@ -64,5 +64,5 @@ dependencies {
     implementation lifecycleDep
     kapt lifecycleKapt
 
-    testImplementation jUnitDep
+    testImplementation project(":test-shared")
 }
