--- a/feature-wallet-impl/build.gradle
+++ b/feature-wallet-impl/build.gradle
@@ -16,6 +16,7 @@ android {
 
         buildConfigField "String", "EHTERSCAN_API_KEY_MOONBEAM", readSecret("EHTERSCAN_API_KEY_MOONBEAM")
         buildConfigField "String", "EHTERSCAN_API_KEY_MOONRIVER", readSecret("EHTERSCAN_API_KEY_MOONRIVER")
+        buildConfigField "String", "EHTERSCAN_API_KEY_ETHEREUM", readSecret("EHTERSCAN_API_KEY_ETHEREUM")
 
         buildConfigField "String", "CROSS_CHAIN_CONFIG_URL", "\"https://raw.githubusercontent.com/nova-wallet/nova-utils/master/xcm/v2/transfers_dev.json\""
     }
