Add ethereum api key to pipeline

--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -39,6 +39,8 @@ on:
         required: true
       EHTERSCAN_API_KEY_MOONRIVER:
         required: true
+      EHTERSCAN_API_KEY_ETHEREUM:
+        required: true
       # Special secrets for signing:
       CI_MARKET_KEYSTORE_PASS:
         required: false
@@ -72,6 +74,7 @@ env:
   MERCURYO_TEST_SECRET: ${{ secrets.MERCURYO_TEST_SECRET }}
   EHTERSCAN_API_KEY_MOONBEAM: ${{ secrets.EHTERSCAN_API_KEY_MOONBEAM }}
   EHTERSCAN_API_KEY_MOONRIVER: ${{ secrets.EHTERSCAN_API_KEY_MOONRIVER }}
+  EHTERSCAN_API_KEY_ETHEREUM: ${{ secrets.EHTERSCAN_API_KEY_ETHEREUM }}
 
   CI_MARKET_KEYSTORE_PASS: ${{ secrets.CI_MARKET_KEYSTORE_PASS }}
   CI_MARKET_KEYSTORE_KEY_ALIAS: ${{ secrets.CI_MARKET_KEYSTORE_KEY_ALIAS }}
