--- a/runtime/build.gradle
+++ b/runtime/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
+apply from: '../scripts/secrets.gradle'
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
@@ -15,6 +16,8 @@ android {
         buildConfigField "String", "EVM_ASSETS_URL", "\"https://raw.githubusercontent.com/nova-wallet/nova-utils/master/assets/evm/v2/assets_dev.json\""
 
         buildConfigField "String", "TEST_CHAINS_URL", "\"https://raw.githubusercontent.com/nova-wallet/nova-utils/master/tests/chains_for_testBalance.json\""
+
+        buildConfigField "String", "INFURA_API_KEY", readSecret("INFURA_API_KEY")
     }
 
     buildTypes {
